[package]
name = "srst"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = {version = "0.8", features = ["runtime-tokio-rustls","sqlite", "macros"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.228", features = ["derive"]}
reqwest = {version = "0.13.4", features = ["json"]}
rig-core = "0.39.0"
